[project]
name = "workout-api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "importlib-metadata>=9.0.0",
    "importlib-resources>=7.1.0",
    "ipdb>=0.13.13",
    "marshmallow>=4.3.0",
    "werkzeug>=3.1.8",
]
